--- a/random_color.css
+++ b/random_color.css
@@ -84,17 +84,25 @@ body {
     position: relative;
     transition: all 0.2s;
     font-family: 'Audiowide', cursive;
+    box-shadow: 0 0 10px 1px rgb(255, 255, 255);
 }
 
 .btn:hover {
-    box-shadow: 0 0 10px 1px rgb(255, 255, 255);
+    box-shadow: 0 0 10px 5px rgb(255, 255, 255);
     border-color: white;
-
 }
 
 nav {
-    width:100%;
+    width:23%;
     font-family: 'Audiowide', cursive;
+    background-color: rgb(29, 29, 33);
+    color:white;
+    border-radius: 15px;
+    position:relative;
+    transform: translateX(-29.5rem);
+    margin-top: 1rem;
+    padding-bottom: 10px;
+    box-shadow: 0 0 10px 1px rgb(40, 39, 39);;
 }
 h1 {
     margin-left: 2rem;
