--- a/random_color.css
+++ b/random_color.css
@@ -3,6 +3,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-sizing:border-box
+    /* flex-wrap: wrap;
+    align-items: center; */
 }
 
 .motherDiv {
@@ -93,21 +96,54 @@ body {
 }
 
 nav {
-    width:23%;
-    font-family: 'Audiowide', cursive;
-    background-color: rgb(29, 29, 33);
-    color:white;
-    border-radius: 15px;
-    position:relative;
-    transform: translateX(-29.5rem);
-    margin-top: 1rem;
-    padding-bottom: 10px;
-    box-shadow: 0 0 10px 1px rgb(40, 39, 39);;
+    width:100%;
+    text-align: left;
 }
 h1 {
+    width: 20%;
     margin-left: 2rem;
     margin-top: 2rem;
+    background-color: rgb(29, 29, 33);
+    box-shadow: 0 0 10px 1px rgb(40, 39, 39);
+    font-family: 'Audiowide', cursive;
+    border-radius: 10px;
+    padding: 20px 5px 20px 25px;
+
 }
+
+@media(max-width:1068px) {
+    nav {
+        text-align: center;
+    }
+    h1{
+        padding: 20px 5px 20px 10px;
+        margin-left: 2rem;
+    }
+}
+
+@media(max-width:800px) {
+    nav {
+        text-align: center;
+    }
+    h1{
+        width: 100%;
+        padding: 20px 0px 20px 0px;
+        margin-left: 2rem;
+        transition: width 2s;
+        margin-left: 0px;
+    }
+}
+
+/* @media(max-width:650px) {
+    nav {
+        text-align: left;
+    }
+    h1{
+        padding: 20px 50px 20px 10px;
+        margin-left: 2rem;
+        transition: 2s;
+    }
+} */
 
 
 
