--- a/random_color.css
+++ b/random_color.css
@@ -3,7 +3,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-sizing:border-box
+    box-sizing:border-box;
+    background-color: rgb(42, 40, 40);
     /* flex-wrap: wrap;
     align-items: center; */
 }
@@ -13,13 +14,13 @@ body {
     justify-content: center;
     width :500px;
     height:500px;
-    margin-top: -5rem;
+    margin-top: -7rem;
 }
 
 .circle {
     width:200px;
     height:200px;
-    border:2px solid black;
+    border:2px solid rgb(42, 40, 40);
 }
 #cirR {
     background-color: red;
@@ -98,6 +99,7 @@ body {
 nav {
     width:100%;
     text-align: left;
+    color: white;
 }
 h1 {
     width: 20%;
@@ -107,7 +109,7 @@ h1 {
     box-shadow: 0 0 10px 1px rgb(40, 39, 39);
     font-family: 'Audiowide', cursive;
     border-radius: 10px;
-    padding: 20px 5px 20px 25px;
+    padding: 20px 10px 20px 25px;
 
 }
 
